--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+input:focus,
+textarea:focus
+{ outline: none }
+
 header { margin-bottom: 50px; }
 
 /* ================ Global ============================ */
